--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
-nose==1.3.7
 SQLAlchemy==1.0.15
+argparse==1.2.1
+click==6.6
+colorama==0.3.7
+docopt==0.6.2
+nose==1.3.7
+pyfiglet==0.7.5
+termcolor==1.1.0
+wsgiref==0.1.2
