--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: python
 python:
   - "2.7"
 # command to run tests
+install:
+  - pip install -r requirements.txt
+  - pip install coverage
 script:
-  - nosetests Amity/tests
+  - nosetests --with-coverage
+
+after-success:
+  - coveralls
 
