--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-SQLAlchemy==1.0.15
-argparse==1.2.1
 click==6.6
 colorama==0.3.7
+coverage==4.2
 docopt==0.6.2
+funcsigs==1.0.2
+mock==2.0.0
 nose==1.3.7
+pbr==1.10.0
 pyfiglet==0.7.5
+six==1.10.0
+SQLAlchemy==1.0.15
 termcolor==1.1.0
-wsgiref==0.1.2
