(Chore) Adds codacy and coverage badge also from codacy (Chore) Removes ar.py file

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 # command to run tests
 install:
   - pip install -r requirements.txt
+  - pip install coveralls
   - pip install coverage
 script:
   - nosetests --with-coverage
