--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ SQLAlchemy==1.0.15
 argparse==1.2.1
 backports.shutil-get-terminal-size==1.0.0
 click==6.6
+codacy-coverage==1.3.2
 codeclimate-test-reporter==0.1.2
 colorama==0.3.7
 coverage==4.2
